public class Hospital {
    public static void main(String[] args) {



        PresentationTier pt = new PresentationTier();
        pt.presentationTier();
    }
}